@@ -28,8 +28,7 @@ git_remote = github
 [Prereq]
 File::Spec                = 0
 List::Util                = 0
-Moose                     = 0.65 ; attr fulfills requires
-MooseX::AttributeHelpers  = 0
+Moose                     = 0.90 ; Moose::Meta::Attribute::Native
 MooseX::AttributeTree     = 0
 MooseX::Types             = 0
 PostScript::File          = 2.00 ; Metrics support
